fix:(cover master code)

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     "react/destructuring-assignment":0,
     "react/jsx-no-target-blank":0,
     "react/forbid-prop-types":0,
+    "react/prop-types":0,
     "jsx-a11y/click-events-have-key-events":0,
     "jsx-a11y/no-noninteractive-element-interactions":0,
     "no-else-return":0,
