--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dev-dashboard",
-  "version": "1.0.0",
+  "version": "1.10.1",
   "description": "local debugging dashboard",
   "main": "lib/index.js",
   "scripts": {
@@ -9,7 +9,6 @@
     "build:umd": "webpack --config script/webpack.umd.js --hide-modules --progress --colors",
     "build:typings": "tsc -p tsconfig.d.json",
     "build": "rm -rf lib/ && npm run build:typings && npm run build:umd",
-    "publish": "rm -rf node_modules && npm run build && npm run build:typings && npm publish",
     "lint": "eslint --quiet ./src --no-error-on-unmatched-pattern",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -44,6 +43,10 @@
     "history": "4.10.1",
     "perfect-scrollbar": "1.5.0",
     "react-router-dom": "^5.2.0"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.6",
+    "react-dom": ">=16.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
