feat: (cover master)

--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,29 @@
-/src
-/public
-/node_modules/
-.babelrc
-.eslintignore
-.eslintrc.js
-.gitignore
-config-overrides.js
-gulpfile.js
-jsconfig.json
+bower_components/
+*.cfg
+node_modules/
+nohup.out
+*.iml
+.idea/
+.ipr
+.iws
+*~
+~*
+*.diff
+*.log
+*.patch
+*.bak
+.DS_Store
+Thumbs.db
+.project
+.*proj
+.svn/
+*.swp
+out/
+.build
+node_modules
+_site
+sea-modules
+spm_modules
+.cache
+.happypack
 package-lock.json
-/build/*.png
-/build/*.jpg
-/build/*.ico
