--- a/package.json
+++ b/package.json
@@ -1,69 +1,98 @@
 {
   "name": "dev-dashboard",
-  "version": "1.9.1",
-  "description": "Local debugging",
-  "private": false,
-  "main": "build/index.js",
-  "dependencies": {
-    "@material-ui/core": "4.10.0",
-    "@material-ui/icons": "4.9.1",
-    "classnames": "2.2.6",
-    "history": "4.10.1",
-    "perfect-scrollbar": "1.5.0",
-    "prop-types": "15.7.2",
-    "react-router-dom": "5.2.0"
-  },
+  "version": "1.10.1",
+  "description": "local debugging dashboard",
+  "main": "lib/index.js",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "rm -rf build && react-app-rewired build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "lint:check": "eslint . --ext=js,jsx;  exit 0",
-    "lint:fix": "eslint . --ext=js,jsx --fix;  exit 0",
-    "build-package-css": "cp src/assets/css/material-dashboard-react.css dist/material-dashboard-react.css",
-    "build-package": "npm run build-package-css && babel src --out-dir dist"
-  },
-  "author": "seven<yuanziwen7489757@gmail.com> (https://yuanziwen.cn/)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/yzw7489757/dev-dashboard/issues"
+    "start": "webpack-dev-server --config script/webpack.dev.js --hot --inline --open-page '?dev'",
+    "https": "HTTPS=true npm start",
+    "build:umd": "webpack --config script/webpack.umd.js --hide-modules --progress --colors",
+    "build:typings": "tsc -p tsconfig.d.json",
+    "build": "rm -rf lib/ && npm run build:typings && npm run build:umd",
+    "lint": "eslint --quiet ./src --no-error-on-unmatched-pattern",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yzw7489757/dev-dashboard.git"
   },
+  "keywords": [
+    "local",
+    "deugging"
+  ],
+  "files": [
+    "lib"
+  ],
+  "precommit.silent": true,
+  "pre-commit": [
+    "lint",
+    "build:typings",
+    "test"
+  ],
+  "author": "yzw7489757",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yzw7489757/dev-dashboard/issues"
+  },
   "homepage": "https://github.com/yzw7489757/dev-dashboard#readme",
-  "keywords": [],
-  "optionalDependencies": {
-    "@types/googlemaps": "3.39.6",
-    "@types/markerclustererplus": "2.1.33",
-    "ajv": "6.12.2",
-    "typescript": "3.9.3"
+  "dependencies": {
+    "@material-ui/core": "4.10.1",
+    "@material-ui/icons": "4.9.1",
+    "classnames": "^2.2.6",
+    "history": "4.10.1",
+    "perfect-scrollbar": "1.5.0",
+    "react-router-dom": "^5.2.0"
   },
   "peerDependencies": {
     "react": ">=16.8.6",
     "react-dom": ">=16.8.6"
   },
   "devDependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-scripts": "3.4.1",
-    "@babel/core": "^7.10.2",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-prettier": "3.1.3",
-    "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.8",
-    "mini-css-extract-plugin": "^0.9.0",
-    "prettier": "2.0.5",
-    "react-app-rewired": "^2.1.6"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": []
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-async-generator-functions": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
+    "@babel/runtime": "^7.5.5",
+    "@rollup/plugin-json": "^4.0.3",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.0",
+    "css-loader": "^1.0.0",
+    "dev-dashboard": "^1.9.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "file-loader": "^6.0.0",
+    "jest": "^25.0.0",
+    "less": "^3.0.0",
+    "less-loader": "^5.0.0",
+    "pre-commit": "^1.2.2",
+    "prettier": "~1.17.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "style-loader": "^1.0.0",
+    "tslib": "^2.0.0",
+    "typescript": "^3.7.3",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-notifier": "^1.8.0"
   }
 }
