--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dev-dashboard",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "description": "local debugging dashboard",
   "main": "lib/index.js",
   "scripts": {
@@ -11,9 +11,9 @@
     "build": "rm -rf lib/ && npm run build:typings && npm run build:umd",
     "lint": "eslint --quiet ./src --no-error-on-unmatched-pattern",
     "release": "standard-version --release-as",
-    "publish:major": "npm run release -- major && tnpm publish",
-    "publish:minor": "npm run release -- minor && tnpm publish",
-    "publish:patch": "npm run release -- patch && tnpm publish",
+    "publish:major": "npm run release -- major && npm publish",
+    "publish:minor": "npm run release -- minor && npm publish",
+    "publish:patch": "npm run release -- patch && npm publish",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -38,6 +38,9 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/yzw7489757/dev-dashboard/issues"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "homepage": "https://github.com/yzw7489757/dev-dashboard#readme",
   "dependencies": {
