--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dev-dashboard",
-  "version": "2.0.9",
+  "version": "2.1.0",
   "description": "local debugging dashboard",
   "main": "lib/index.js",
   "scripts": {
@@ -47,13 +47,13 @@
     "@material-ui/core": "4.10.1",
     "@material-ui/icons": "4.9.1",
     "classnames": "^2.2.6",
-    "history": "4.10.1",
     "perfect-scrollbar": "1.5.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.3.0"
   },
   "peerDependencies": {
     "react": ">=16.8.6",
-    "react-dom": ">=16.8.6"
+    "react-dom": ">=16.8.6",
+    "react-router-dom": ">=5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
