--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dev-dashboard",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "local debugging dashboard",
   "main": "lib/index.js",
   "scripts": {
@@ -44,16 +44,14 @@
   },
   "homepage": "https://github.com/yzw7489757/dev-dashboard#readme",
   "dependencies": {
-    "@material-ui/core": "4.10.1",
-    "@material-ui/icons": "4.9.1",
-    "classnames": "^2.2.6",
-    "perfect-scrollbar": "1.5.0",
-    "react-router-dom": "^5.3.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.0.0"
   },
   "peerDependencies": {
     "react": ">=16.8.6",
     "react-dom": ">=16.8.6",
-    "react-router-dom": ">=5.3.0"
+    "react-router-dom": ">=5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
